# SFML-tiles

./: .gitignore  CMakeLists.txt  README.md  SFML_Tiles_vs.sln  SFML_Tiles_vs.vcxproj  SFML_Tiles_vs.vcxproj.filters
.github/workflows/: cmake.yml
src/: Game.cpp  Game.h  Game.hpp  PauseMenu.cpp  PauseMenu.hpp  State.cpp  State.h  State.hpp  main.cpp
src/components/: AnimatedHitbox.cpp  AnimatedHitbox.hpp  AnimationComponent.cpp  AnimationComponent.hpp  AttributeComponent.cpp  AttributeComponent.hpp  HitboxComponent.cpp  HitboxComponent.hpp  MovementComponent.cpp  MovementComponent.hpp
src/components/Animation/: AnimatedHitbox.cpp  AnimatedHitbox.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp
src/config/: editorstate_keybinds  gamestate_keybinds  supported_keys  window  window.json
src/entities/: Entity.cpp  Entity.h  Entity.hpp  Player.cpp  Player.h  Player.hpp
src/gui/: Button.cpp  DropDownList.cpp  PauseMenu.cpp  PauseMenu.hpp  PlayerGUI.cpp  PlayerGUI.hpp  TextureSelector.cpp  gui.hpp
src/gui/progressBar/: progressBar.cpp  progressBar.hpp
src/headers/: headers.hpp
src/images/character/: char.txt  player_sheet.xcf
src/resource/: Button.cpp  Button.h  Button.hpp  CheckBox.cpp  DropDownList.cpp  GraphicSettings.cpp  GraphicSettings.hpp  KeyState.cpp  KeyState.hpp  TextureSelector.cpp  fragment_shader.frag  gui.hpp  headers.hpp  vertex_shader.vert
src/resource/algo/: Noise.cpp  Noise.hpp
src/resource/algo/test/: res.json  run.cpp  run.hpp  trace.py
src/resource/gui/: Button.cpp  DropDownList.cpp  gui.hpp
src/states/: EditorState.cpp  EditorState.hpp  GameState.cpp  GameState.h  GameState.hpp  MainMenuState.cpp  MainMenuState.h  MainMenuState.hpp  SettingsState.cpp  SettingsState.hpp  State.cpp  State.hpp
src/tile/: Chunk.cpp  Chunk.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  TileRegistry.cpp  TileRegistry.hpp  _CustomTile.cpp  _CustomTile.hpp
src/tile/Custom/: Dirt.cpp  Dirt.hpp  Stone.cpp  Stone.hpp  Tiletype.hpp
